feat(locations): Add API for Create/Get/List locations
