# api/openapi.yaml
@@ -60,7 +60,7 @@ paths:
     get:
       description: Refresh an access token
       security:
-        - pinmanAuth: []
+        - pinmanAuth: [ ]
       responses:
         "200":
           content:
@@ -173,6 +173,80 @@ paths:
           $ref: "#/components/responses/notFound"
       tags:
         - leagues
+  ###
+  # Location Endpoints
+  ###
+  /locations:
+    get:
+      description: Retrieve a list of locations
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/locationListResponse'
+          description: Successful response
+        "400":
+          $ref: "#/components/responses/badRequest"
+        "401":
+          $ref: "#/components/responses/unauthorized"
+        "403":
+          $ref: "#/components/responses/forbidden"
+      tags:
+        - locations
+    post:
+      description: Create a new location
+      security:
+        - pinmanAuth:
+            - user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/locationCreate'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/locationResponse'
+          description: Location was created successfully
+        "400":
+          $ref: "#/components/responses/badRequest"
+        "401":
+          $ref: "#/components/responses/unauthorized"
+        "403":
+          $ref: "#/components/responses/forbidden"
+      tags:
+        - locations
+  /locations/{slug}:
+    get:
+      description: Retrieve a location by slug
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/locationResponse'
+          description: Successful response
+        "400":
+          $ref: "#/components/responses/badRequest"
+        "401":
+          $ref: "#/components/responses/unauthorized"
+        "403":
+          $ref: "#/components/responses/forbidden"
+        "404":
+          $ref: "#/components/responses/notFound"
+      tags:
+        - locations
+
 components:
   responses:
     unauthorized:
@@ -290,6 +364,55 @@ components:
         - role
         - created_at
         - updated_at
+
+    location:
+      example:
+        id: id
+        name: name
+        address: address
+        slug: slug
+        pinball_map_id: pinball_map_id
+        created_at: created_at
+        updated_at: updated_at
+      properties:
+        id:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+        name:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+        address:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+        slug:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+        pinball_map_id:
+          type: integer
+          x-oapi-codegen-extra-tags:
+            binding: required
+        created_at:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+        updated_at:
+          type: string
+          x-oapi-codegen-extra-tags:
+            binding: required
+      type: object
+      required:
+        - id
+        - name
+        - address
+        - slug
+        - pinball_map_id
+        - created_at
+        - updated_at
+
     ###
     # Generic Request/Response Schemas
     ###
@@ -429,6 +552,54 @@ components:
         - name
         - location
         - slug
+
+    ###
+    # Location Request/Response Schemas
+    ###
+    locationResponse:
+      example:
+        location:
+          id: id
+          name: name
+          address: address
+          slug: slug
+          pinball_map_id: pinball_map_id
+          created_at: created_at
+          updated_at: updated_at
+      properties:
+        location:
+          $ref: '#/components/schemas/location'
+      type: object
+    locationListResponse:
+      example:
+        locations:
+          - id: id
+            name: name
+            address: address
+            slug: slug
+            pinball_map_id: pinball_map_id
+            created_at: created_at
+            updated_at: updated_at
+      properties:
+        locations:
+          type: array
+          items:
+            $ref: '#/components/schemas/location'
+      type: object
+      required:
+        - locations
+    locationCreate:
+      example:
+        pinball_map_id: pinball_map_id
+      properties:
+        pinball_map_id:
+          type: integer
+          x-oapi-codegen-extra-tags:
+            binding: required
+      type: object
+      required:
+        - pinball_map_id
+
   securitySchemes:
     pinmanAuth:
       flows:
